Bug 481034 - Applying a color profile makes the screen much darker
Summary: Applying a color profile makes the screen much darker
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.92.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-02-07 23:01 UTC by Ilya Bizyaev
Modified: 2024-02-27 16:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
U2722DE.icm (2.56 KB, application/vnd.iccprofile)
2024-02-07 23:02 UTC, Ilya Bizyaev
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ilya Bizyaev 2024-02-07 23:01:40 UTC
SUMMARY
I wanted to test the new “ICC color profile” option in Display Configuration, so I've downloaded an .icm file for my monitor and tried to apply it in System Settings. For some reason, that makes my screen much darker at the same brightness levels, which I suspect could be a problem.

I don't have any additional “Steps to reproduce”, but the problem is likely hardware-specific.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20240206
KDE Plasma Version: 6.0.80
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.1
Kernel Version: 6.7.2-1-default (64-bit)
Graphics Platform: Wayland
Processors: 32 × Intel® Core™ i9-14900K
Graphics Processor: NVIDIA GeForce RTX 4070/PCIe/SSE2

ADDITIONAL INFORMATION
Monitor: https://www.dell.com/support/home/en-uk/product-support/product/dell-u2722de-monitor/overview
The .icm file (attached) is extracted from https://www.dell.com/support/home/en-uk/drivers/driversdetails?driverid=1hwjn&oscode=wt64a&productcode=dell-u2722de-monitor
Comment 1 Ilya Bizyaev 2024-02-07 23:02:09 UTC
Created attachment 165653 [details]
U2722DE.icm
Comment 2 Ilya Bizyaev 2024-02-07 23:20:28 UTC
As previously asked in chat:

KWin support info: https://invent.kde.org/-/snippets/2974
(zzag: “running opengl, not opengl es” because “nvidia is different from mesa, kwin asks for an opengl context version 3.1, and nvidia gives back exactly that version, even though it supports 4.5 or 4.6 or newer”)
Comment 3 Doug 2024-02-09 06:26:56 UTC
Applying your color profile to my completely different monitor from a different manufacturer also makes my screen somewhat darker.  Don't know if that tells us anything though.
Comment 4 Bug Janitor Service 2024-02-27 01:52:34 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/5310
Comment 5 Zamundaaa 2024-02-27 15:25:54 UTC
Git commit dd53576fe2b039b922a7b70b7038eac0841a275e by Xaver Hugl.
Committed on 27/02/2024 at 15:14.
Pushed by zamundaaa into branch 'master'.

core/colorspace: normalize XYZ values before using them in calculations

Otherwise ICC profiles where the primaries are normalized to different values than what
KWin needs may cause too dark or bright results.

M  +6    -1    src/core/colorspace.cpp

https://invent.kde.org/plasma/kwin/-/commit/dd53576fe2b039b922a7b70b7038eac0841a275e
Comment 6 Zamundaaa 2024-02-27 16:12:02 UTC
Git commit f20ce6244cc2b14145e5c543c6b8d5fdbb36bd66 by Xaver Hugl.
Committed on 27/02/2024 at 15:57.
Pushed by zamundaaa into branch 'Plasma/6.0'.

core/colorspace: normalize XYZ values before using them in calculations

Otherwise ICC profiles where the primaries are normalized to different values than what
KWin needs may cause too dark or bright results.

M  +6    -1    src/core/colorspace.cpp

https://invent.kde.org/plasma/kwin/-/commit/f20ce6244cc2b14145e5c543c6b8d5fdbb36bd66