core/colorspace: normalize XYZ values before using them in calculations

Otherwise ICC profiles where the primaries are normalized to different values than what
KWin needs may cause too dark or bright results.

BUG: 481034